--- a/package.json
+++ b/package.json
@@ -1,104 +1,55 @@
 {
-  "name": "cesium",
-  "version": "1.39.0",
-  "description": "Cesium is a JavaScript library for creating 3D globes and 2D maps in a web browser without a plugin.",
-  "homepage": "http://cesiumjs.org",
+  "name": "CBG Biodiversity sampling visualization",
+  "version": "0.01",
+  "description": "Visualization of future biodiversity sampling done by Centre of Biodiversity Genomics",
   "license": "Apache-2.0",
-  "author": {
-    "name": "Analytical Graphics, Inc.",
-    "url": "http://www.agi.com"
-  },
-  "contributors": [
-    {
-      "name": "Cesium community",
-      "url": "https://github.com/AnalyticalGraphicsInc/cesium/blob/master/CONTRIBUTORS.md"
-    }
-  ],
   "keywords": [
-    "3D",
-    "webgl",
-    "geospatial",
-    "map",
-    "globe"
+    "Centre for Biodiversity Genomics",
+    "sampling"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AnalyticalGraphicsInc/cesium.git"
-  },
-  "bugs": {
-    "url": "https://github.com/AnalyticalGraphicsInc/cesium/issues",
-    "email": "cesium-dev@googlegroups.com"
-  },
   "dependencies": {
-    "requirejs": "^2.3.2"
+    "basic-auth-connect": "1.0.0",
+    "body-parser": "1.15.0",
+    "bootstrap": "3.3.6",
+    "bootstrap-webpack": "0.0.5",
+    "cesium": "1.38.0",
+    "css-loader": "0.23.1",
+    "csv-parse": "1.0.2",
+    "d3": "3.5.12",
+    "d3-svg-legend": "1.8.0",
+    "exports-loader": "0.6.2",
+    "express": "4.13.4",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "html-webpack-plugin": "1.7.0",
+    "imports-loader": "0.6.5",
+    "jquery": "2.1.4",
+    "jquery-form": "3.50.0",
+    "less": "2.6.1",
+    "less-loader": "2.2.3",
+    "lodash": "4.2.0",
+    "loglevel": "1.4.0",
+    "moment": "2.11.2",
+    "multer": "1.1.0",
+    "path": "0.12.7",
+    "reconnectingwebsocket": "1.0.0",
+    "serve-index": "1.7.3",
+    "style-loader": "0.13.0",
+    "toastr": "2.1.2",
+    "url-loader": "0.5.7",
+    "webpack": "1.13.0",
+    "whatwg-fetch": "0.11.0",
+    "winston": "2.1.1",
+    "winston-papertrail": "1.0.2",
+    "ws": "1.0.1"
   },
   "devDependencies": {
-    "almond": "^0.3.3",
-    "aws-sdk": "^2.18.0",
-    "bluebird": "^3.4.6",
-    "compressible": "^2.0.9",
-    "compression": "^1.6.2",
-    "electron": "^1.6.1",
-    "eslint": "^4.0.0",
-    "eslint-plugin-html": "^3.0.0",
-    "event-stream": "^3.3.4",
-    "express": "^4.15.0",
-    "globby": "^6.1.0",
-    "glsl-strip-comments": "^1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-insert": "^0.5.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.6.1",
-    "gulp-tap": "^1.0.1",
-    "gulp-zip": "^4.0.0",
-    "jasmine-core": "^2.5.2",
-    "jsdoc": "^3.4.3",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-detect-browsers": "^2.2.3",
-    "karma-edge-launcher": "^0.4.2",
-    "karma-electron": "^5.1.1",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-requirejs": "^1.1.0",
-    "karma-safari-launcher": "^1.0.0",
-    "karma-spec-reporter": "^0.0.31",
-    "mime": "^2.0.3",
-    "mkdirp": "^0.5.1",
-    "request": "^2.79.0",
-    "rimraf": "^2.6.1",
-    "yargs": "^9.0.1"
+    "webpack-dev-server": "1.14.1"
   },
   "scripts": {
     "start": "node server.js",
-    "startPublic": "node server.js --public",
-    "build": "gulp build",
-    "build-watch": "gulp build-watch",
-    "buildApps": "gulp buildApps",
-    "clean": "gulp clean",
-    "cloc": "gulp cloc",
-    "combine": "gulp combine",
-    "combineRelease": "gulp combineRelease",
-    "requirejs": "gulp requirejs",
-    "generateDocumentation": "gulp generateDocumentation",
-    "instrumentForCoverage": "gulp instrumentForCoverage",
-    "eslint": "eslint \"./**/*.js\" \"./**/*.html\" --cache --quiet",
-    "makeZipFile": "gulp makeZipFile",
-    "minify": "gulp minify",
-    "minifyRelease": "gulp minifyRelease",
-    "release": "gulp release",
-    "test": "gulp test",
-    "test-all": "gulp test --all",
-    "test-webgl": "gulp test --include WebGL",
-    "test-non-webgl": "gulp test --exclude WebGL",
-    "test-webgl-validation": "gulp test --webglValidation",
-    "test-webgl-stub": "gulp test --webglStub",
-    "test-release": "gulp test --release",
-    "generateStubs": "gulp generateStubs",
-    "sortRequires": "gulp sortRequires",
-    "deploy-s3": "gulp deploy-s3",
-    "deploy-status": "gulp deploy-status",
-    "deploy-set-version": "gulp deploy-set-version"
+    "debug": "webpack-dev-server -d --progress",
+    "build": "webpack -p --progress",
+    "postinstall": "bash ./postinstall.sh && webpack -p --progress "
   }
 }
